...
  };

  return (
    <StyledSafeAreaView className="flex-1 justify-end bg-black p-4">
      <View className="flex-1 items-center justify-center">
        <Text className="pb-2 text-center text-4xl font-bold text-white">
          AI Mail
        </Text>

        <Text className="pb-2 text-center text-lg font-light text-white">
          Simple. Smart. Mail.
        </Text>
      </View>
...
